<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray"
    android:gravity="center"
    android:orientation="vertical">

    <AutoCompleteTextView
        android:paddingTop = "6dp"
        android:paddingBottom = "6dp"
        android:paddingLeft = "6dp"
        android:paddingRight = "6dp"
        android:layout_marginBottom = "8dp"
        android:id="@+id/etEmail"
        android:background="@drawable/bg_edit_text_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/email_hint"
        android:textCursorDrawable = "@null"/>

    <EditText
        android:paddingTop = "6dp"
        android:paddingBottom = "6dp"
        android:paddingLeft = "6dp"
        android:paddingRight = "6dp"
        android:layout_marginBottom = "8dp"
        android:background="@drawable/bg_edit_text_auth"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textCursorDrawable = "@null"/>

    <LinearLayout
        android:layout_marginTop = "8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_marginStart = "8dp"
            android:layout_marginEnd = "4dp"
            android:textColor = "@color/color_white"
            android:background="@drawable/bg_button"
            android:id="@+id/buttonEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enter"/>

        <Button
            android:layout_marginStart = "4dp"
            android:layout_marginEnd = "8dp"
            android:textColor = "@color/color_white"
            android:background="@drawable/bg_button"
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registration"/>

    </LinearLayout>

</LinearLayout>
