<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <EditText
            android:paddingTop = "6dp"
            android:paddingBottom = "6dp"
            android:paddingLeft = "6dp"
            android:paddingRight = "6dp"
            android:layout_marginBottom = "8dp"
            android:background="@drawable/bg_edit_text_auth"
            android:textCursorDrawable = "@null"
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <EditText
            android:paddingTop = "6dp"
            android:paddingBottom = "6dp"
            android:paddingLeft = "6dp"
            android:paddingRight = "6dp"
            android:layout_marginBottom = "8dp"
            android:background="@drawable/bg_edit_text_auth"
            android:textCursorDrawable = "@null"
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:paddingTop = "6dp"
            android:paddingBottom = "6dp"
            android:paddingLeft = "6dp"
            android:paddingRight = "6dp"
            android:layout_marginBottom = "8dp"
            android:background="@drawable/bg_edit_text_auth"
            android:textCursorDrawable = "@null"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/password_enter"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <EditText
            android:paddingTop = "6dp"
            android:paddingBottom = "6dp"
            android:paddingLeft = "6dp"
            android:paddingRight = "6dp"
            android:layout_marginBottom = "8dp"
            android:background="@drawable/bg_edit_text_auth"
            android:textCursorDrawable = "@null"
            android:id="@+id/tvPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/password_enter_again"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <Button
            android:layout_marginStart = "4dp"
            android:layout_marginEnd = "8dp"
            android:textColor = "@color/color_white"
            android:background="@drawable/bg_button"
            android:id="@+id/btnRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/registration" />
    </LinearLayout>
</ScrollView>
